--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
+    "gulp-connect": "^2.2.0",
     "gulp-inject": "^1.3.1",
     "gulp-less": "^3.0.3",
-    "gulp-serve": "^1.0.0",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
     "stream-series": "^0.1.1",
