--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bootstrap": "~3.3.5",
     "isotope": "~2.2.0",
+    "jquery": "1.11.3",
     "jquery.scrollTo": "~2.1.1",
     "jquery.stellar": "~0.6.2",
     "flexslider": "~2.5.0",
